--- a/theme/en.html
+++ b/theme/en.html
@@ -18,6 +18,25 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <!-- favicon -->
+    <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicons/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="/assets/favicons/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="/assets/favicons/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="/assets/favicons/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="/assets/favicons/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="/assets/favicons/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="/assets/favicons/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="/assets/favicons/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="/assets/favicons/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="/assets/favicons/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/favicon-16x16.png">
+<link rel="manifest" href="/assets/favicons/manifest.json">
+<meta name="msapplication-TileColor" content="#408f85">
+<meta name="msapplication-TileImage" content="/assets/favicons/ms-icon-144x144.png">
+<meta name="theme-color" content="#408f85">
+<!-- end favicon -->
     <!-- begin open graph -->
     <meta property="og:title">
     <meta property="og:description">
@@ -29,7 +48,7 @@
   </head>
   <body>
     <div class="next-event">
-      The next event is 3/14! Details <a href="https://www.facebook.com/events/168208207016175/">here</a>
+      The next event is 4/18! Details <a href="https://www.facebook.com/events/1529347843743966/">here</a>
     </div>
     <div class="menu">
       <div class="container">
@@ -105,16 +124,16 @@
         <!-- This is the footer -->
         <div class="">
           <div class="footer-content">
-					<p>CONTACT US RIGHT NOW!</p>
-					<p>Have your own event you would like us to mention? Have a game trailer you would like us to upload? Dying to present at the next event?! Contact us right here.</p>
+					<p>Contact Us</p>
+					<p>Have your own event you would like us to mention? Have a game trailer you would like us to upload? Dying to present at the next event? Contact us right here.</p>
+					<p>
+          <a href="mailto:tokyoindies@gmail.com">Email</a>
+					</p>
 					<p>
             Fab Cafe MTRL (2F)<br>
             Dogenzaka Pia<br>
             Dogenzaka 1−22-7<br>
             Shibuya-ku, Tokyo
-					</p>
-					<p>
-          <a href="mailto:tokyoindies@gmail.com">Email</a>
 					</p>
                 <p style="text-align: center">© 2017 Tokyo Indies. All rights reserved.</p>
           </div>
