--- a/theme/single.html
+++ b/theme/single.html
@@ -18,6 +18,26 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <!-- favicon -->
+    <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicons/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="/assets/favicons/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="/assets/favicons/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="/assets/favicons/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="/assets/favicons/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="/assets/favicons/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="/assets/favicons/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="/assets/favicons/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="/assets/favicons/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="/assets/favicons/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/favicon-16x16.png">
+<link rel="manifest" href="/assets/favicons/manifest.json">
+<meta name="msapplication-TileColor" content="#408f85">
+<meta name="msapplication-TileImage" content="/assets/favicons/ms-icon-144x144.png">
+<meta name="theme-color" content="#408f85">
+<!-- end favicon -->
+
     <!-- begin open graph -->
     <meta property="og:title">
     <meta property="og:description">
@@ -29,7 +49,7 @@
   </head>
   <body>
     <div class="next-event">
-      次のイベントは3/14! 詳細は<a href="https://www.facebook.com/events/168208207016175/">こちら</a>
+      次のイベントは4/18! 詳細は<a href="https://www.facebook.com/events/1529347843743966/">こちら</a>
     </div>
     <div class="menu">
       <div class="container">
@@ -106,15 +126,12 @@
         <div class="">
           <div class="footer-content">
         <p>お問い合わせ</p>
-        <p>様々なイベントの告知、ゲームトレーラーの共有、今後イベントで発表したいことがありましたら、こちらまでご連絡ください！</p>
+        <p>様々なイベントの告知、ゲームトレーラーの共有、今後イベントで発表したいことがありましたら、<a href="mailto:tokyoindies@gmail.com">こちらまでご連絡ください！</a></p>
 					<p>
             〒150-0043 東京都渋谷区<br>
             道玄坂1−22-7<br>
             道玄坂ピア<br>
             Fab Cafe MTRL (2F)
-					</p>
-					<p>
-          <a href="mailto:tokyoindies@gmail.com">メール</a>
 					</p>
                 <p style="text-align: center">© 2017 Tokyo Indies. All rights reserved.</p>
           </div>
