Move email link in english template

--- a/theme/en.html
+++ b/theme/en.html
@@ -125,10 +125,7 @@
         <div class="">
           <div class="footer-content">
 					<p>Contact Us</p>
-					<p>Have your own event you would like us to mention? Have a game trailer you would like us to upload? Dying to present at the next event? Contact us right here.</p>
-					<p>
-          <a href="mailto:tokyoindies@gmail.com">Email</a>
-					</p>
+          <p>Have your own event you would like us to mention? Have a game trailer you would like us to upload? Dying to present at the next event? Contact us right <a href="mailto:tokyoindies@gmail.com">here</a>.</p>
 					<p>
             Fab Cafe MTRL (2F)<br>
             Dogenzaka Pia<br>
