Add cropped header for default opengraph image

--- a/theme/single.html
+++ b/theme/single.html
@@ -41,7 +41,7 @@
     <!-- begin open graph -->
     <meta property="og:title">
     <meta property="og:description">
-    <meta property="og:image" default="https://tokyoindies.com/assets/img/illust.png">
+    <meta property="og:image" default="http://tokyoindies.com/assets/img/illust-c.png">
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:creator" content="@tokyo_indies">
     <!-- end open graph -->
