--- a/theme/single.html
+++ b/theme/single.html
@@ -49,7 +49,7 @@
   </head>
   <body>
     <div class="next-event">
-      次のイベントは4/18! 詳細は<a href="https://www.facebook.com/events/1529347843743966/">こちら</a>
+      次のイベントは5/16! 詳細は<a href="https://www.facebook.com/events/480001205724415/">こちら</a>!
     </div>
     <div class="menu">
       <div class="container">
