Update event link

--- a/theme/en.html
+++ b/theme/en.html
@@ -48,7 +48,7 @@
   </head>
   <body>
     <div class="next-event">
-      The next event is 5/16! Details <a href="https://www.facebook.com/events/480001205724415/">here</a>!
+      The next event is 6/13! Details <a href="https://www.facebook.com/events/460235884313184/">here</a>
     </div>
     <div class="menu">
       <div class="container">
