--- a/theme/single.html
+++ b/theme/single.html
@@ -49,7 +49,7 @@
   </head>
   <body>
     <div class="next-event">
-      次のイベントは5/16! 詳細は<a href="https://www.facebook.com/events/480001205724415/">こちら</a>!
+      次のイベントは6/13! 詳細は<a href="https://www.facebook.com/events/460235884313184/">こちら</a>！
     </div>
     <div class="menu">
       <div class="container">
