Update event links

--- a/theme/en.html
+++ b/theme/en.html
@@ -47,11 +47,9 @@
 
   </head>
   <body>
-    <!--
     <div class="next-event">
-      The next event is 6/13! Details <a href="https://www.facebook.com/events/460235884313184/">here</a>
+      The next event is 8/15! Details <a href="https://www.facebook.com/events/1846122539035194/">here</a>!
     </div>
-    -->
     <div class="menu">
       <div class="container">
         <div class="navbar-header">
