Update next event date

--- a/theme/single.html
+++ b/theme/single.html
@@ -49,7 +49,7 @@
   </head>
   <body>
     <div class="next-event">
-      次のイベントは11/14! 詳細は<a href="https://www.facebook.com/events/113942539368286/">こちら</a>！
+      次のイベントは2/6! <!-- 詳細は<a href="https://www.facebook.com/events/138131873569660/">こちら</a>！ -->
     </div>
     <div class="menu">
       <div class="container">
