--- a/theme/single.html
+++ b/theme/single.html
@@ -50,7 +50,8 @@
   </head>
   <body>
     <div class="next-event">
-      次のイベントは10/16! 詳細は<a href="https://www.facebook.com/events/885735281621992/">こちら</a>！
+      次のイベントは1/15! 
+      <!-- 次のイベントは1/15! 詳細は<a href="https://www.facebook.com/events/299423660911337">こちら</a>！-->
     </div>
     <div class="menu">
       <div class="container">
