--- a/theme/en.html
+++ b/theme/en.html
@@ -49,7 +49,8 @@
   </head>
   <body>
     <div class="next-event">
-      The next event is 10/16! Details <a href="https://www.facebook.com/events/885735281621992/">here</a>!
+      The next event is 1/15!
+      <!-- The next event is 12/11! Details <a href="https://www.facebook.com/events/299423660911337">here</a>! -->
     </div>
     <div class="menu">
       <div class="container">
