Add content / generated posts

--- a/public/en/access/index.html
+++ b/public/en/access/index.html
@@ -103,6 +103,12 @@ Location Akihabara MOGRA Matsubishi Building, 3-11 Akihabara Taito-ku, Tokyo "/>
           </li>
           
           <li class="list f5 f4-ns fw4 dib pr3">
+            <a class="hover-white no-underline white-90" href="/en/posts/" title="Posts page">
+              Posts
+            </a>
+          </li>
+          
+          <li class="list f5 f4-ns fw4 dib pr3">
             <a class="hover-white no-underline white-90" href="/en/" title="Tokyo Indies page">
               Tokyo Indies
             </a>
