--- a/public/en/faq/index.html
+++ b/public/en/faq/index.html
@@ -99,6 +99,12 @@ What is the event like? The event is mainly indie devs casually hanging out in a
           </li>
           
           <li class="list f5 f4-ns fw4 dib pr3">
+            <a class="hover-white no-underline white-90" href="/en/posts/" title="Posts page">
+              Posts
+            </a>
+          </li>
+          
+          <li class="list f5 f4-ns fw4 dib pr3">
             <a class="hover-white no-underline white-90" href="/en/" title="Tokyo Indies page">
               Tokyo Indies
             </a>
