--- a/public/en/present/index.html
+++ b/public/en/present/index.html
@@ -103,6 +103,12 @@ About Presentations Presentations begin around 20:30 Presentations should be rou
           </li>
           
           <li class="list f5 f4-ns fw4 dib pr3">
+            <a class="hover-white no-underline white-90" href="/en/posts/" title="Posts page">
+              Posts
+            </a>
+          </li>
+          
+          <li class="list f5 f4-ns fw4 dib pr3">
             <a class="hover-white no-underline white-90" href="/en/" title="Tokyo Indies page">
               Tokyo Indies
             </a>
